# rs-db

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  clippy.toml  justfile  rustfmt.toml
.github/instructions/: db.instructions.md
.github/workflows/: ci.yml
crates/db-automerge/: Cargo.toml
crates/db-automerge/src/: automerge_btree.rs  lib.rs  store_adapter.rs
crates/db-automerge/src/automerge_btree/: codec.rs  compaction.rs  hash.rs  key.rs  lifecycle.rs  reconstruction.rs  scan.rs  transaction.rs
crates/db-automerge/src/store_adapter/: named.rs  snapshot.rs
crates/db-core/: Cargo.toml
crates/db-core/src/: blocking.rs  btree.rs  codec.rs  codec_helpers.rs  codec_primitives.rs  codec_registry.rs  concurrency.rs  engine_types.rs  lib.rs  named_tree.rs  port.rs  range_merge.rs  simple_key.rs  test_helpers.rs  transaction_patch.rs
crates/db-core/tests/: btree_contract.rs
crates/db-engine/: Cargo.toml
crates/db-engine/examples/: codec_roundtrip.rs  engine_joins.rs  engine_simple.rs
crates/db-engine/src/: access_control.rs  change_event.rs  engine.rs  engine_kernel.rs  from_row.rs  index_maintainer.rs  json_ops.rs  lib.rs  predicate.rs  query.rs  row_deserialize_error.rs  row_deserializer.rs  schema.rs  schema_resolver.rs  store_adapter.rs  store_codec.rs  store_facade.rs  subscriptions.rs  types.rs
crates/db-engine/src/engine_kernel/: catalog.rs  executor.rs  join_builder.rs  plan.rs  planner.rs  select_orchestrator.rs  select_pipeline.rs  transaction_lifecycle.rs
crates/db-engine/src/engine_kernel/operators/: aggregate.rs  aggregator.rs  index_join.rs  join_algorithm.rs  mod.rs  nested_loop_join.rs  scan.rs  sorter.rs
crates/db-engine/src/store_adapter/: backend_contract.rs  helpers.rs  persistence.rs  transaction.rs
crates/db-engine/tests/: backend_contract.rs  json_roundtrip.rs  mock_engine.rs  property_codec.rs  row_deserializer.rs
crates/db-facade/: Cargo.toml
crates/db-facade/src/: api.rs  lib.rs  types.rs
crates/db-in-memory/: Cargo.toml
crates/db-in-memory/src/: in_memory_btree.rs  in_memory_named.rs  lib.rs  patch_map.rs
crates/db-redb/: Cargo.toml
crates/db-redb/src/: lib.rs  redb_btree.rs  redb_named.rs
crates/db-sql-to-engine/: Cargo.toml
crates/db-sql-to-engine/src/: core.rs  engine_adapter.rs  ir.rs  lib.rs  translate.rs
crates/db-sql-to-engine/src/translate/: having.rs  helpers.rs  mod.rs  params.rs  predicates.rs  translate.rs
crates/db-types/: Cargo.toml
crates/db-types/src/: codec.rs  engine_types.rs  key_encoding.rs  lib.rs  persistence.rs  schema.rs  storage_codec.rs  store.rs
crates/db-wasm/: Cargo.toml  README.md
crates/db-wasm/scripts/: postbuild.mjs
crates/db-wasm/src/: db.rs  lib.rs  params.rs  pluggable_store.rs  sql.rs  store_adapter.rs
crates/db-wasm/tests/: backend_transaction_adapter.rs  sql_params_wasm.rs
docs/: design.md  examples.md  goal.md
examples/: automerge.rs  automerge_redb.rs  engine_automerge.rs  engine_automerge_redb.rs  engine_joins.rs  engine_simple.rs  in_memory.rs  json.rs  json_types.rs  typed_queries.rs
examples/e2e/: Cargo.toml
examples/e2e/src/: lib.rs
src/: database_dispatch.rs  database_types.rs  facade.rs  lib.rs
src/facade/: api.rs  dispatch.rs  mod.rs  types.rs
tests/: facade_json.rs  facade_smoke.rs  facade_sql.rs  facade_subscriptions.rs  facade_typed_queries.rs  offline_sync.rs  subscriptions_basic.rs  subscriptions_comprehensive.rs
