[package]
rust-version = "1.94"
name = "db"
description = "Database built on top of a B-Tree implementation."
repository = "https://github.com/aicacia/rs-db"

[package.edition]
workspace = true

[package.version]
workspace = true

[package.authors]
workspace = true

[package.license]
workspace = true


[features]
default = ["std", "automerge", "redb"]
std = []
redb = ["std", "db-redb", "dep:redb"]
automerge = ["std", "db-automerge"]

[lib]
name = "db"

[dependencies]
db-engine = { path = "crates/db-engine", default-features = false, features = [
    "std",
] }
db-in-memory = { path = "crates/db-in-memory", default-features = false, features = [
    "std",
] }
db-redb = { path = "crates/db-redb", default-features = false, optional = true }
db-automerge = { path = "crates/db-automerge", default-features = false, optional = true }
thiserror = { version = "1.0", default-features = false }
db-sql-to-engine = { path = "crates/db-sql-to-engine", default-features = false, features = [
    "std",
] }
db-core = { path = "crates/db-core", default-features = false, features = [
    "std",
] }
redb = { version = "4.0", default-features = false, features = [
], optional = true }

[dev-dependencies]
futures = { version = "0.3", default-features = false, features = ["executor"] }
[workspace]
members = [
    "crates/db-core",
    "crates/db-types",
    "crates/db-engine",
    "crates/db-in-memory",
    "crates/db-redb",
    "crates/db-automerge",
    "crates/db-sql-to-engine",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["nathanfaucett@gmail.com"]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# These lints are from the `restriction` lint group and prevent specific
# constructs being used in source code in order to drive up consistency,
# quality, and brevity
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
absolute_paths = "warn"

# May cause issues with structured logging otherwise.
literal_string_with_formatting_args = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
