[package]
name = "db-core"
version = "0.1.0"
edition = "2024"
description = "Core async storage traits and types for the database"

[lib]
name = "db_core"
path = "src/lib.rs"

[features]
default = ["std"]
std = ["futures/std", "serde/std"]
test-helpers = ["async-lock", "async-stream"]
wasm = ["tsify", "serde/derive", "serde-wasm-bindgen", "wasm-bindgen"]

[dependencies]
serde = { version = "1.0", default-features = false, features = [] }
futures = { version = "0.3", default-features = false, features = [] }
async-lock = { version = "3.4", default-features = false, features = [
], optional = true }
async-stream = { version = "0.3", default-features = false, features = [
], optional = true }

# Optional TS generation + serde for tsify
tsify = { version = "0.5", default-features = false, features = [
  "js",
], optional = true }
serde-wasm-bindgen = { version = "0.6", default-features = false, optional = true }
wasm-bindgen = { version = "0.2", default-features = false, features = [
  "std",
], optional = true }

thiserror = { version = "1.0", default-features = false }

[dev-dependencies]
db-in-memory = { path = "../db-in-memory", default-features = false, features = [
  "std",
] }
db-redb = { path = "../db-redb", default-features = false }
