[package]
name = "db-facade"
version = "0.1.0"
edition = "2024"
description = "Facade API over engine and storage backends"

[lib]
path = "src/lib.rs"
name = "db_facade"

[features]
default = ["std"]
std = [
  "db-core/std",
  "db-engine/std",
  "db-in-memory/std",
  "db-sql-to-engine/std",
  "db-types/std",
]
redb = ["std", "db-redb", "dep:redb"]
automerge = ["std", "db-automerge"]

[dependencies]
# Workspace crates
db-automerge = { path = "../db-automerge", default-features = false, optional = true }
db-core = { path = "../db-core", default-features = false }
db-engine = { path = "../db-engine", default-features = false }
db-in-memory = { path = "../db-in-memory", default-features = false }
db-redb = { path = "../db-redb", default-features = false, optional = true }
db-sql-to-engine = { path = "../db-sql-to-engine", default-features = false }
db-types = { path = "../db-types", default-features = false }

# External crates
futures = { version = "0.3", default-features = false }
redb = { version = "4.0", default-features = false, features = [
], optional = true }
uuid = { version = "1.18", default-features = false }
