[package]
name = "db-in-memory"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "db_in_memory"

[features]
default = []
std = ["futures/std", "async-lock/std", "db-core/std"]

[dependencies]
db-core = { path = "../db-core", default-features = false, features = [] }
async-stream = { version = "0.3", default-features = false, features = [] }
futures = { version = "0.3", default-features = false, features = [] }
async-lock = { version = "3.4", default-features = false, features = [] }

[dev-dependencies]
db-core = { path = "../db-core", default-features = false, features = ["std"] }
