[package]
name = "db-redb"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
db-core = { path = "../db-core", default-features = false, features = ["std"] }
async-stream = { version = "0.3", default-features = false, features = [] }
futures = { version = "0.3", default-features = false, features = ["std"] }
async-lock = { version = "3.4", default-features = false, features = [] }
redb = { version = "4.0", default-features = false, features = [] }

[dev-dependencies]
db-core = { path = "../db-core", default-features = false, features = ["std"] }

[features]
default = []
