[package]
name = "db-sql-to-engine"
version = "0.1.0"
edition = "2024"
description = "Engine layer of the database"

[lib]
path = "src/lib.rs"
name = "db_sql_to_engine"

[features]
default = ["std"]
std = ["db-engine/std", "sqlparser/std", "thiserror/std"]
wasm = ["tsify", "serde", "serde-wasm-bindgen", "wasm-bindgen"]

[dependencies]
db-engine = { path = "../db-engine", default-features = false, features = [] }
sqlparser = { version = "0.61", default-features = false, features = [] }
hashbrown = { version = "0.17", default-features = false, features = [
  "default-hasher",
] }
thiserror = { version = "2.0", default-features = false, features = [] }
uuid = { version = "1.18", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Optional TS generation + serde for tsify
tsify = { version = "0.5", default-features = false, features = [
  "js",
], optional = true }
serde = { version = "1.0", default-features = false, features = [
  "derive",
], optional = true }
serde-wasm-bindgen = { version = "0.6", default-features = false, optional = true }
wasm-bindgen = { version = "0.2", default-features = false, features = [
  "std",
], optional = true }

[dev-dependencies]
