[package]
name = "db-types"
version = "0.1.0"
edition = "2024"
description = "Shared store-level domain types and codec/persistence helpers"

[lib]
path = "src/lib.rs"
name = "db_types"

[features]
default = ["std"]
std = ["db-core/std"]
wasm = ["tsify", "serde", "serde_json", "serde-wasm-bindgen", "wasm-bindgen"]

[dependencies]
db-core = { path = "../db-core", default-features = false, features = ["std"] }
futures = { version = "0.3", default-features = false }

# Optional TS generation + serde for tsify
tsify = { version = "0.5", default-features = false, features = [
  "js",
], optional = true }
serde = { version = "1.0", default-features = false, features = [
  "derive",
], optional = true }
serde_json = { version = "1.0", default-features = false, features = [
  "std",
], optional = true }
serde-wasm-bindgen = { version = "0.6", default-features = false, optional = true }
wasm-bindgen = { version = "0.2", default-features = false, features = [
  "std",
], optional = true }
