[package]
name = "db-wasm"
version = "0.1.0"
edition = "2024"
description = "DB WASM"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "db_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
async-stream = { version = "0.3", default-features = false }
console_error_panic_hook = { version = "0.1", default-features = false }
futures = { version = "0.3", default-features = false }
js-sys = { version = "0.3", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-wasm-bindgen = { version = "0.6", default-features = false }
tsify = { version = "0.5", default-features = false, features = ["js"] }
wasm-bindgen = { version = "0.2", default-features = false, features = ["std"] }
wasm-bindgen-futures = { version = "0.4", default-features = false }

# workspace dependencies
db-core = { path = "../db-core", default-features = false, features = ["wasm"] }
db-facade = { path = "../db-facade", default-features = false, features = [
  "std",
] }
db-engine = { path = "../db-engine", default-features = false, features = [
  "wasm",
] }
db-in-memory = { path = "../db-in-memory", default-features = false }
db-sql-to-engine = { path = "../db-sql-to-engine", default-features = false, features = [
  "wasm",
] }
db-types = { path = "../db-types", default-features = false, features = [
  "wasm",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
